2016-04-08  ------ omnetpp-5.0 released ------

2016-03-23  Zoltan Bojthe

	* Added markup to config option descriptions

2016-04-01  Mihaly Palenik

	* Added tooltip to timeline messages
	* Added tooltips to Preferences dialog and Find Objects dialog
	* Deactivated dummy GateInspector
	* GenericObjectInspector not to open a new window when double-clicking
	  on an object

2016-04-01  Andras Varga

	* osg: fix: earth scenes did not display in the osg-intro sample

	Root cause: zNear/zFar was not set explicitly in these demos, so it stuck
	with the default values in cOsgCanvas: 1 and 1000.  This caused basically
	all of the scene to be clipped away (out of z range).

	Solution: cOsgCanvas does NOT contain any zNear/zFar by default, only
	when explicitly set. In the viewer, activate near/far autocompute mode
	when cOsgCanvas has no zNear/zFar, otherwise set DO_NOT_COMPUTE_NEAR_FAR.

	Adjusting the aspect ratio in OsgViewer::resizeEvent() is not needed when
	setProjectionResizePolicy(HORIZONTAL) is set.

2016-03-11  Mihaly Palenik

	* Set margin on layout of simTimeLabel and eventNumLabel

2016-03-11  Mihaly Palenik

	* Add tooltips to status

2016-03-23  Rudolf Hornig

	* osg: Following the changing osgEarth::Viewpoint API.

2016-03-21  Andras Varga

	* "#undef emit" no longer needed in simkerneldefs.h

2016-03-21  Andras Varga

	* Fix: clear componentHistory between runs

2016-03-10  ------ omnetpp-5.0rc released ------

2016-02-29  Levente Meszaros

	* Changed the background color of the simtime and eventnum labels to
	white.

2016-02-28  Attila Torok

	* StopDialog default position is under the floating toolbar. And its
	  geometry can easily be made persistent.
	* Toolbar event status appearance modified. (layout, frame, font size)
	* Renamed .qtenv.ini to .qtenvrc.

2016-02-26  Mihaly Palenik

	* Follow recent Tkenv changes

2016-02-22  Andras Varga

	* Added fields to the toolbar that display the *current* simulation time