@@ -1,5 +1,9 @@
 2016-04-08  ------ omnetpp-5.0 released ------
 
+2016-04-13  Andras Varga
+
+	* Display scheduler info() string on status bar
+
 2016-03-23  Zoltan Bojthe
 
 	* Added markup to config option descriptions
